# Dissertation-Project

./: .gitignore  LICENSE.md  Lit_rev.tex  Project_log.tex  Project_log.txt  README.md
Misc/Test/: pyproject.toml
Misc/Test/Data/Input/campaign_1/: .gitattributes
Misc/Test/Data/Input/delta_0.25/: BOUT.dmp.0.nc  BOUT.dmp.1.nc  BOUT.dmp.2.nc  BOUT.dmp.3.nc  BOUT.dmp.4.nc  BOUT.dmp.5.nc  BOUT.dmp.6.nc  BOUT.dmp.7.nc  BOUT.settings
Misc/Test/Data/Input/delta_1/: BOUT.dmp.0.nc  BOUT.dmp.1.nc  BOUT.dmp.2.nc  BOUT.dmp.3.nc  BOUT.dmp.4.nc  BOUT.dmp.5.nc  BOUT.dmp.6.nc  BOUT.dmp.7.nc  BOUT.settings
Misc/Test/Data/Input/delta_10/: BOUT.dmp.0.nc  BOUT.dmp.1.nc  BOUT.dmp.2.nc  BOUT.dmp.3.nc  BOUT.dmp.4.nc  BOUT.dmp.5.nc  BOUT.dmp.6.nc  BOUT.dmp.7.nc  BOUT.settings
Misc/Test/Data/Input/delta_1_B0_0.1/: BOUT.dmp.0.nc  BOUT.dmp.1.nc  BOUT.dmp.2.nc  BOUT.dmp.3.nc  BOUT.inp  BOUT.settings
Misc/Test/Data/Input/delta_1_B0_0.2/: BOUT.dmp.0.nc  BOUT.dmp.1.nc  BOUT.dmp.2.nc  BOUT.dmp.3.nc  BOUT.inp  BOUT.settings
Misc/Test/Data/Input/delta_1_B0_0.3/: BOUT.dmp.0.nc  (+5 more)
Misc/Test/Scripts/: max_n.py  n_front.py  n_front_FWHM.py  test.py  v_data.py
Misc/Test/Scripts/GP/: test.py
Misc/Test/Scripts/model_run/: inp_gen.py  mpirun.py
Misc/Test/Scripts/vel_out/: __init__.py  n_front.py  n_front_FWHM.py  n_hmap_subplots.py  test.py  v_data.py  v_process.py
Misc/Test/blob2dgp/: pyproject.toml
Misc/Test/src/GP/: test.py
Misc/Test/src/dist_blob2dgp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Misc/Test/src/vel_out/: n_hmap_subplots.py  test.py  v_data.py
(+4139 files in other folders)
