[project]
name = "blob2dgp"
version = "0.1.0"
dependencies = [
    "os",
    "subprocess",
    "re",
    "fileinput",
    "numpy",
    "scipy",
    "pandas",
    "xarray",
    "xbout",
    "boututils",
    "sklearn",
    "matplotlib",
    "tqdm",
]

[project.scripts]
script_name = "package.module:function"